<resources>
    <string name="app_name">JChat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_string_login">Log in</string>
    <string name="login_string_signup">Sign up</string>
    <string name="login_string_switcher_tosignup">No account yet? Click me</string>
    <string name="login_string_switcher_tologin">Already have an account? Click me</string>
    <string name="login_string_password">Password</string>
    <string name="login_string_username">Username</string>
    <string name="chat_send">send</string>
    <string name="chat_message">Message</string>
    <string name="login_string_toggle_anonymous">anonymous</string>
    <string name="login_string_toggle_credentials">credentials</string>
    <string name="create_join_group_join">Join</string>
    <string name="create_join_group_create">Create</string>
    <string name="create_join_group_groupid">Group ID</string>
    <string name="create_join_group_groupname">Group name</string>
    <string name="menu_refresh">refresh</string>
    <string name="menu_sign_out">sign out</string>
    <string name="menu_show_current_user">show current user</string>
    <string name="chats_message_copied">Message copied!</string>
    <string name="groupId_copied">groupId copied!</string>
</resources>
