<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.drunkenapps.jchat.ActivityMain">
    <item
        android:id="@+id/menu_showcurrentuser"
        android:title="@string/menu_show_current_user" />
    <item
        android:id="@+id/menu_signout"
        android:title="@string/menu_sign_out" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/menu_cleanup"
        android:title="cleanup" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
